@@ -7,6 +7,7 @@ User-visible changes in version 0.9.4  (2010-  -  ):
   with X = n >= 3 and n < 10 ? 15 : x
 * removed syntax "order="
 * removed syntax "commands < file[m:n]", only the whole file can be executed
+* modulo syntax changed from a%b to mod(a,b)
 
 User-visible changes in version 0.9.3  (2010-06-24):
 * changed implementation of gamma and related functions (using boost.math now)
